# rustray

./: Cargo.toml
.github/workflows/: lint.yml  test.yml
canvas_lib/: Cargo.toml
core/src/: colour.rs  lib.rs  point.rs  tuple.rs  vector.rs
draw_lib/: Cargo.toml
draw_lib/src/: canvas.rs  file_helper.rs  lib.rs  ppm_wrapper.rs
geom_lib/: Cargo.toml
geom_lib/src/: colour.rs  intersections.rs  lib.rs  light.rs  materials.rs  matrix.rs  point.rs  ray.rs  sphere.rs  translation.rs  tuple.rs  util.rs  vector.rs
math/: Cargo.toml
math/src/: lib.rs  matrix4.rs  ray.rs  square_matrix.rs  transformations.rs
output/: Cargo.toml
output/src/: canvas.rs  file_helper.rs  lib.rs  ppm_wrapper.rs
ray_simulator/: Cargo.toml
ray_simulator/src/: main.rs
raytracer/: Cargo.toml
raytracer/src/: lib.rs  main.rs
raytracer/src/scenes/: mod.rs  pattern.rs  room.rs  simple_plane.rs
raytracer/src/world/: mod.rs  room.rs  simple_plane.rs
render/: Cargo.toml
render/src/: camera.rs  lib.rs  light.rs  lighting.rs  world.rs
shapes/: Cargo.toml
shapes/src/: computations.rs  intersections.rs  lib.rs  materials.rs  pattern.rs  plane.rs  shape.rs  sphere.rs
