[package]
name = "ray_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
math = { path = "../math" }
render = { path = "../render" }
shapes = { path = "../shapes" }
draw_lib = { path = "../draw_lib" }

