[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
math = { path = "../math" }
output = { path = "../output" }
shapes = { path = "../shapes" }
rayon = "1.5.1"
